# pyseasters

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  bsrn_stations.tsv  pyproject.toml
docs/: autosummary_modules.py  conf.py  constants.md  contributing.md  index.md  index.rst  install.md  install.rst  modules.rst  page.rst
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  modules.html  objects.inv  page.html  py-modindex.html  pyseasters.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  page.doctree  pyseasters.doctree
docs/_build/_sources/: index.md.txt  index.rst.txt  installation.md.txt  page.md.txt  pyseasters.rst.txt
docs/_build/_static/: documentation_options.js
docs/_build/source/: index.html
docs/_static/: custom.css  references.bib  versions.json
docs/_templates/: module.rst  module.rst.jinja  package.rst.jinja
docs/api/: pyseasters.constants.countries.rst  pyseasters.constants.pathconfig.rst  pyseasters.constants.rst  pyseasters.data_curation.download.main.rst  pyseasters.data_curation.download.rst  pyseasters.data_curation.extra.rst  pyseasters.data_curation.preprocess.ghcnd_data.rst  pyseasters.data_curation.preprocess.ghcnd_metadata.rst  pyseasters.data_curation.preprocess.ghcnh.rst  pyseasters.data_curation.preprocess.ghcnh_metadata.rst  pyseasters.data_curation.preprocess.gsdr.rst  pyseasters.data_curation.preprocess.rst  pyseasters.data_curation.rst  pyseasters.gauge_data_loader.rst  pyseasters.gauge_data_loaders.rst  pyseasters.ghcnd.data_loaders.rst  pyseasters.ghcnd.metadata_loaders.rst  pyseasters.ghcnd.rst  pyseasters.ghcnh.data_loaders.rst  pyseasters.ghcnh.metadata_loaders.rst  pyseasters.ghcnh.rst  pyseasters.gsdr.data_loaders.rst  pyseasters.gsdr.metadata_loaders.rst  pyseasters.gsdr.rst  pyseasters.rst  pyseasters.utils.rst  pyseasters.utils.units.rst
docs/database/: ghcnd.rst  ghcnh.rst  gsdr.rst  index.rst  presentation.rst  replicate.rst
docs/development/: index.rst  install.rst  installation.rst
docs/faq/: index.rst  parquet.rst
docs/qa/: index.rst
docs/release_notes/: index.rst
docs/source/: conf.py
docs/user_guide/: index.rst  install.rst  installation.rst  rain_gauge.rst  replicate_the_database.rst
example/: example.py
examples/: capture_logging.py  example.py
pyseasters/: __init__.py  config.py  gauge_data_loader.py  gauge_data_loaders.py  load_gauge_data.py
pyseasters/api/: __init__.py  load_gauge_data.py
pyseasters/api/constants/: __init__.py  countries.py  paths.py
pyseasters/api/ghcnd/: __init__.py  load_ghcnd_data.py  load_ghcnd_metadata.py
pyseasters/api/utils/: __init__.py
pyseasters/cli/: __init__.py  ep_generate_download_script.py  ep_preprocess_ghcnd_data.py  ep_preprocess_ghcnd_metadata.py  generate_download_script.py  preprocess_ghcnd_data.py  preprocess_ghcnd_metadata.py  preprocess_ghcnh.py  preprocess_ghcnh_metadata.py  preprocess_gsdr.py
pyseasters/cli/_utils/: __init__.py  dependencies.py  logging.py
pyseasters/cli/generate_download_script/: __init__.py  _ghcnd_data.py  generate_download_script.py
pyseasters/cli/preprocess/: __init__.py  ghcnd_data.py  ghcnd_metadata.py
pyseasters/commands/: __init__.py  generate_download_script.py
pyseasters/commands/ghcnd/: __init__.py  generate_download_script.py  parse_station_metadata.py  preprocess_data.py  preprocess_metadata.py
pyseasters/constants/: __init__.py  countries.py  pathconfig.py  paths.py
pyseasters/constants/data/: .gitignore
pyseasters/data_curation/: __init__.py
pyseasters/data_curation/data/: ghcnh_station-year_psv.parquet  (+1 more)
pyseasters/download/: generate_download_script.py  ghcnd.py
pyseasters/ghcnd/: __init__.py  _constants.py  data_loaders.py  load_ghcnd_data.py  load_ghcnd_metadata.py  metadata_loaders.py
pyseasters/ghcnh/: __init__.py  _constants.py  data_loaders.py  metadata_loaders.py
pyseasters/gsdr/: __init__.py  data_loaders.py  metadata_loaders.py
pyseasters/parsers/: ghcnd.py
pyseasters/preprocess/: __init__.py  ghcnd.py
pyseasters/rain_gauges/: ghcnd.py
pyseasters/utils/: __init__.py  _args.py  _dependencies.py  _logging.py  _memory.py  _search_fallback.py  _typing.py  countries.py  typing.py  units.py
test/: test_config.py
tests/: test_config.py  test_gauge_data_loader.py  test_pathconfig.py
tests/constants/: test_pathconfig.py
tests/ghcnd/: test_data_loaders.py  test_metadata_loaders.py
tests/utils/: test_dependencies.py  test_logging.py  test_units.py
(+25 files in other folders)
