[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseasters"
dynamic = ["version"]
description = "Python package to handle data in the SEASTERS project."
authors = [{ name = "Quentin Desmet", email = "desmetque@gmail.com" }]
dependencies = [
  "pandas",
  "pint",
  "pyyaml",
  "pyarrow",
]

[project.optional-dependencies]
dev = [
  "isort",
  "black",
  "flake8",
  "flake8-pyproject",
  "mypy",
  "types-PyYAML",
  "pandas.stubs",
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "sphinx-autodoc2",
  "sphinx-copybutton",
]
cli = [
  "csvkit",
]

[project.scripts]
generate_download_script = "pyseasters.cli.ep_generate_download_script:main"
preprocess_ghcnd_metadata = "pyseasters.cli.ep_preprocess_ghcnd_metadata:main"
preprocess_ghcnd_data = "pyseasters.cli.ep_preprocess_ghcnd_data:main"

[tool.setuptools_scm]
write_to = "pyseasters/_version.py"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.flake8]
ignore = ["E501", "W503"]
exclude = ["examples/*"]
per-file-ignores = """
  */__init__.py: F401
"""

[tool.mypy]
exclude = '^examples/'

[tool.pytest.ini_options]
addopts = "-v --cov=pyseasters --cov-report=term-missing"
